Bug 167294 - Manage profiles dialog with table fails to edit name.
Summary: Manage profiles dialog with table fails to edit name.
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-23 15:09 UTC by Thomas Zander
Modified: 2011-08-14 22:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8
Sentry Crash Report:


Attachments
make items of the name column non-editabe (905 bytes, patch)
2011-07-20 06:52 UTC, Jekyll Wu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Zander 2008-07-23 15:11:01 UTC
Version:            (using Devel)

The manage profiles dialog has a table with name and a star. The name can be clicked on and edited inline.
Unfortunately the editing has no effect and closing / opening the dialog will revert back to the original profile name.
Comment 1 Kurt Hindenburg 2008-08-10 22:57:34 UTC
Confirmed on trunk/
Comment 2 Damien Gombault 2009-08-03 21:10:34 UTC
I confirm this bug with Konsole 2.3 (KDE 4.3 RC3).
Comment 3 Jekyll Wu 2011-07-13 08:58:04 UTC
This is confusing to the user. Maybe it's a good idea to make the name column non-editable.
Comment 4 Jekyll Wu 2011-07-20 06:52:25 UTC
Created attachment 62007 [details]
make items of the name column non-editabe

Since current code does not actually support renaming profile in the profiles manager dialog, making the items of the name column non-editable may be a nice temporary workaround, at least it avoids the confusion.
Comment 5 Jekyll Wu 2011-08-02 20:35:25 UTC
(In reply to comment #3)
> 

Or better, make it open the 'Edit Profile Dialog', as described in #168605 ?

Currently after selecting a profile, user need to move mouse to the right part and click button to open the 'Edit Profile Dialog'. Not very convenient.
Comment 6 Jekyll Wu 2011-08-14 22:52:58 UTC
Git commit 9329d34467a7b3374a8a214520c3a3d2794938ba by Jekyll Wu.
Committed on 11/08/2011 at 21:08.
Pushed by jekyllwu into branch 'master'.

supports renaming profile in the ManageProfilesDialog.

BUG: 167294
FIXED-IN: 4.8

M  +19   -1    src/ManageProfilesDialog.cpp

http://commits.kde.org/konsole/9329d34467a7b3374a8a214520c3a3d2794938ba