supports renaming profile in the ManageProfilesDialog.

BUG: 167294
FIXED-IN: 4.8